# ECS

./: CMakeLists.txt  CMakePresets.json  config.txt
dependencies/: CMakeLists.txt
src/: BaseComponentStorage.h  CMakeLists.txt  ComponentStorage.cpp  ComponentStorage.h  ComponentStorage.hpp  ConfigReader.cpp  ConfigReader.h  DrawableEntity.h  EntityId.hpp  EntityManager.hpp  Filter.hpp  FilterBuilder.hpp  IInitializer.hpp  ImGUICustom.cpp  ImGUICustom.h  Iterator.hpp  Rectangle.cpp  Rectangle.h  SystemsManager.hpp  Text.cpp  Text.h  Window.cpp  Window.h  World.hpp  main.cpp
src/components/: BoxColliderComponent.h  BulletComponent.h  CircleColliderComponent.h  CircleShapeComponent.h  CollisionComponent.h  MeteorComponent.h  PlayerComponent.h  PolygonShapeComponent.h  Position.h  RectangleShapeComponent.h  Sprite.h  Transform.h  TransformComponent.h  TriangleShapeComponent.h
src/systems/: CollisionSystem.hpp  DetectCollisionSystem.hpp  InitSystem.cpp  InitSystem.h  InitSystem.hpp  MeteorSpawnSystem.hpp  MovementSystem.hpp  PoopCollectorSystem.hpp  ProcessCollisionSystem.hpp  RenderSystem.hpp  RotationSystem.hpp  ScoreSystem.hpp  ShootingSystem.hpp
